--- a/HSPA/Frontend/src/index.html
+++ b/HSPA/Frontend/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/f6486710ce.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title>AugularWithDotNetApi</title>
   <base href="/">
